--- a/.env.example
+++ b/.env.example
@@ -27,11 +27,13 @@ MAX_FILE_SIZE_MB=10
 
 # Database Storage
 DB_ROOT=./data/db
+KB_ROOT=./data/kb
 
 # Context Management
 MAX_CONTEXT_TOKENS=100000  # Max tokens before trimming (adjust per model)
 ENABLE_SUMMARIZATION=true  # Enable running summaries (true/false)
 SUMMARY_THRESHOLD=20  # Summarize after N messages
+MAX_ITERATIONS=20  # Maximum agent reasoning steps before giving up
 
 # Web Search
 SEARXNG_HOST=https://your-searxng-instance.com
