--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,10 @@ MW_TOOL_CALL_LIMIT=100
 MW_TOOL_RETRY_ENABLED=true
 MW_MODEL_RETRY_ENABLED=true
 MW_HITL_ENABLED=false
+MW_TODO_LIST_ENABLED=true
+MW_CONTEXT_EDITING_ENABLED=false
+MW_CONTEXT_EDITING_TRIGGER_TOKENS=100000
+MW_CONTEXT_EDITING_KEEP_TOOL_USES=10
 
 # Context Management
 MAX_CONTEXT_TOKENS=100000  # Max tokens before trimming (adjust per model)
@@ -64,3 +68,16 @@ LOG_FILE=  # Optional: path to log file (e.g., cassey.log)
 # Firecrawl (web scraping API)
 FIRECRAWL_API_KEY=fc-your-firecrawl-api-key
 FIRECRAWL_API_URL=https://api.firecrawl.dev
+
+# OCR (local)
+OCR_ENGINE=paddleocr  # paddleocr | tesseract
+OCR_LANG=en
+OCR_USE_GPU=false
+OCR_MAX_FILE_MB=10
+OCR_MAX_PAGES=3
+OCR_PDF_DPI=200
+OCR_PDF_MIN_TEXT_CHARS=5
+OCR_TIMEOUT_SECONDS=30
+OCR_STRUCTURED_MODEL=fast
+OCR_STRUCTURED_PROVIDER=
+OCR_STRUCTURED_MAX_RETRIES=2
