--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,11 @@ dependencies = [
     "langgraph-prebuilt>=1.0.6",
     "langgraph-api>=0.6.0",
     "langgraph-checkpoint>=4.0.0",
+    "langgraph-checkpoint-postgres>=2.0.0",
     "langgraph-cli>=0.4.0",
     "langgraph-runtime-inmem>=0.22.0",
     "openai>=2.15.0",
-    "psycopg>=3.2.0",
+    "psycopg-pool>=3.3.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
@@ -36,6 +37,10 @@ dependencies = [
     "rapidfuzz>=3.6.0",
     "loguru>=0.7.2",
     "httpx>=0.27.0",
+    "paddleocr>=3.3.2",
+    "paddlepaddle>=3.3.0",
+    "pymupdf>=1.24.0",
+    "psycopg[binary]>=3.2.0",
 ]
 
 [dependency-groups]
