--- a/.env
+++ b/.env
@@ -22,12 +22,23 @@ POSTGRES_PASSWORD=cassey_password
 POSTGRES_DB=cassey_db
 
 # Security
-FILES_ROOT=./data/files
 MAX_FILE_SIZE_MB=10
 
-# Database Storage
-DB_ROOT=./data/db
-KB_ROOT=./data/kb
+# Thread-scoped storage root
+USERS_ROOT=./data/users
+
+# Shared DB (organization-wide)
+SHARED_DB_PATH=./data/shared/shared.db
+
+# Admin access (comma-separated IDs)
+
+# Agent runtime (langchain | custom)
+AGENT_RUNTIME=langchain
+AGENT_RUNTIME_FALLBACK=
+
+# Channels
+CASSEY_CHANNELS=telegram,http
+TZ=Australia/Sydney
 
 # Context Management
 MAX_CONTEXT_TOKENS=100000  # Max tokens before trimming (adjust per model)
@@ -45,3 +56,44 @@ LOG_FILE=cassey.log  # Optional: path to log file (e.g., cassey.log)
 # Firecrawl (web scraping API)
 FIRECRAWL_API_KEY=fc-your-api-key-if-required
 FIRECRAWL_API_URL=https://firecrawl.research-stack.gongchatea.com.au
+
+# LangChain middleware
+MW_SUMMARIZATION_ENABLED=true
+MW_SUMMARIZATION_MAX_TOKENS=10000
+MW_SUMMARIZATION_TARGET_TOKENS=2000
+MW_MODEL_CALL_LIMIT=50
+MW_TOOL_CALL_LIMIT=100
+MW_TOOL_RETRY_ENABLED=true
+MW_MODEL_RETRY_ENABLED=true
+MW_HITL_ENABLED=false
+MW_TODO_LIST_ENABLED=true
+MW_CONTEXT_EDITING_ENABLED=false
+MW_CONTEXT_EDITING_TRIGGER_TOKENS=100000
+MW_CONTEXT_EDITING_KEEP_TOOL_USES=10
+
+# SeekDB (KB backend)
+SEEKDB_EMBEDDING_MODE=default
+SEEKDB_FULLTEXT_PARSER=space
+SEEKDB_DISTANCE_METRIC=cosine
+SEEKDB_DATABASE=kb
+
+# Memory (Embedded User Memories)
+MEM_AUTO_EXTRACT=false
+MEM_CONFIDENCE_MIN=0.6
+MEM_MAX_PER_TURN=3
+MEM_EXTRACT_MODEL=gpt-4o-mini
+MEM_EXTRACT_PROVIDER=openai
+MEM_EXTRACT_TEMPERATURE=0.0
+
+# OCR (local)
+OCR_ENGINE=paddleocr
+OCR_LANG=en
+OCR_USE_GPU=false
+OCR_MAX_FILE_MB=10
+OCR_MAX_PAGES=3
+OCR_PDF_DPI=200
+OCR_PDF_MIN_TEXT_CHARS=5
+OCR_TIMEOUT_SECONDS=30
+OCR_STRUCTURED_MODEL=fast
+OCR_STRUCTURED_PROVIDER=
+OCR_STRUCTURED_MAX_RETRIES=2
