--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,10 @@ ADMIN_THREAD_IDS=
 AGENT_RUNTIME=langchain
 AGENT_RUNTIME_FALLBACK=
 
+# Channels
+CASSEY_CHANNELS=telegram,http
+TZ=UTC
+
 # LangChain middleware
 MW_SUMMARIZATION_ENABLED=true
 MW_SUMMARIZATION_MAX_TOKENS=10000
@@ -51,6 +55,20 @@ MW_TODO_LIST_ENABLED=true
 MW_CONTEXT_EDITING_ENABLED=false
 MW_CONTEXT_EDITING_TRIGGER_TOKENS=100000
 MW_CONTEXT_EDITING_KEEP_TOOL_USES=10
+
+# Memory (Embedded User Memories)
+MEM_AUTO_EXTRACT=false
+MEM_CONFIDENCE_MIN=0.6
+MEM_MAX_PER_TURN=3
+MEM_EXTRACT_MODEL=gpt-4o-mini
+MEM_EXTRACT_PROVIDER=openai
+MEM_EXTRACT_TEMPERATURE=0.0
+
+# SeekDB (KB backend)
+SEEKDB_EMBEDDING_MODE=default  # default | none
+SEEKDB_FULLTEXT_PARSER=space  # ik | space | ngram | ngram2 | beng
+SEEKDB_DISTANCE_METRIC=cosine  # cosine | l2 | inner_product
+SEEKDB_DATABASE=kb
 
 # Context Management
 MAX_CONTEXT_TOKENS=100000  # Max tokens before trimming (adjust per model)
