--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,10 +35,11 @@ dependencies = [
     "pypdf>=6.6.0",
     "dateparser>=1.2.0",
     "rapidfuzz>=3.6.0",
+    "pyseekdb>=0.1.0",
     "loguru>=0.7.2",
     "httpx>=0.27.0",
-    "paddleocr>=3.3.2",
-    "paddlepaddle>=3.3.0",
+    "paddleocr>=3.3.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "paddlepaddle>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
     "pymupdf>=1.24.0",
     "psycopg[binary]>=3.2.0",
 ]
