--- a/.env
+++ b/.env
@@ -35,7 +35,9 @@ OLLAMA_CLOUD_API_KEY=046845d8d9234a1694cecea204f3e459.QK7vLNdmE0vhmNvXO-DymlEx
 # EXECUTIVE_ASSISTANT_CHANNELS=telegram,http
 
 # Telegram Bot
-TELEGRAM_BOT_TOKEN=8567338898:AAFHIs3FSmZDJecT_7XumgcbX0J22q1NK94
+# TELEGRAM_BOT_TOKEN=8371069399:AAHahFLcZu3NUKp_fSn6OJpxYEislpoouiI # jen_ea_bot
+TELEGRAM_BOT_TOKEN=8416140352:AAEZQCaSmGfUDTZfB5tjmwkFA1NfVD5ThDo # ken_ea_bot
+# TELEGRAM_BOT_TOKEN=8547541352:AAFQsfjm9vkwxtREdgMIGeBpHmLusGGzv1I # executive_assistant_ai_bot
 # TELEGRAM_WEBHOOK_URL=https://your-domain.com/webhook
 # TELEGRAM_WEBHOOK_SECRET=your-secret
 
@@ -92,3 +94,4 @@ TEMPORAL_HOST=temporal.gongchatea.com.au
 #
 # Time Zone
 TZ=Australia/Sydney
+AGENT_NAME=Ken
