--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ OLLAMA_CLOUD_API_KEY=046845d8d9234a1694cecea204f3e459.QK7vLNdmE0vhmNvXO-DymlEx
 # ============================================================================
 
 # Active channels (comma-separated: telegram,http)
-# EXECUTIVE_ASSISTANT_CHANNELS=telegram,http
+EXECUTIVE_ASSISTANT_CHANNELS=telegram,http
 
 # Telegram Bot
 # AGENT_NAME=Jen
