--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,47 +2,39 @@ services:
   executive_assistant:
     image: eddyatmc/executive_assistant:latest
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
-      EXECUTIVE_ASSISTANT_CHANNELS: ${EXECUTIVE_ASSISTANT_CHANNELS:-http}
-      CHECKPOINT_STORAGE: ${CHECKPOINT_STORAGE:-postgres}
+      # Container-internal overrides (if needed)
       POSTGRES_HOST: postgres
-      POSTGRES_PORT: ${POSTGRES_PORT:-5432}
-      POSTGRES_DB: ${POSTGRES_DB:-executive_assistant_db}
-      POSTGRES_USER: ${POSTGRES_USER:-executive_assistant}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-executive_assistant_password}
-      TZ: ${TZ:-UTC}
-      ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
-      OPENAI_API_KEY: ${OPENAI_API_KEY}
-      ZHIPUAI_API_KEY: ${ZHIPUAI_API_KEY}
-      OLLAMA_CLOUD_API_KEY: ${OLLAMA_CLOUD_API_KEY}
-      AGENT_NAME: ${AGENT_NAME}
-      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
-      SEARXNG_HOST: ${SEARXNG_HOST}
-      FIRECRAWL_API_KEY: ${FIRECRAWL_API_KEY}
-      FIRECRAWL_API_URL: ${FIRECRAWL_API_URL}
+      POSTGRES_PORT: 5432
     volumes:
       - executive_assistant_data:/app/data
       - ./data/admins:/app/data/admins
     ports:
-      - "${EXECUTIVE_ASSISTANT_PORT:-8000}:8000"
+      - "8000:8000"
     depends_on:
       postgres:
         condition: service_healthy
+    # Keep container running for debugging
+    stdin_open: true
+    tty: true
 
   postgres:
     image: postgres:18-alpine
     restart: always
+    env_file:
+      - .env
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-executive_assistant_password}
-      POSTGRES_DB: ${POSTGRES_DB:-executive_assistant_db}
       POSTGRES_USER: ${POSTGRES_USER:-executive_assistant}
-    ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      POSTGRES_DB: ${POSTGRES_DB:-executive_assistant_db}
     volumes:
       - pgdata:/var/lib/postgresql
       - ./migrations:/docker-entrypoint-initdb.d:ro
+    ports:
+      - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-executive_assistant} -d ${POSTGRES_DB:-executive_assistant_db}"]
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 5s
       timeout: 5s
       retries: 5
