Reorganize docs/tests into features/tests
Move various documentation and result files into a new features/ directory and relocate test files into tests/. Rename email-calendar-contacts-integration.md to google-workspace-integration.md. Also update docker/config.yaml to add an additional admin thread id (http:admin) to admin.thread_ids.

--- a/docker/config.yaml
+++ b/docker/config.yaml
@@ -27,7 +27,7 @@ channels:
 # Admin Access Control
 admin:
   user_ids: [] # Comma-separated list of admin user IDs
-  thread_ids: [telegram:6282871705] # Comma-separated list of admin thread IDs
+  thread_ids: [telegram:6282871705,http:admin] # Comma-separated list of admin thread IDs
 
 # ============================================================================
 # CORE INTELLIGENCE
