Add deterministic HTTP test runner & unify tests
Introduce a deterministic HTTP scope runner and unify the test plan/report. Adds scripts/run_http_scope_tests.sh (profiles: core/weekly/extended/all, restart support), new tests (end-to-end tool e2e, embedded tool-call parsing, reminder parser, Ollama compatibility, etc.), and several test files. Update TEST.md and TEST_REPORT.md to a unified deterministic scope and reporting contract, add IMPROVEMENT_PLAN.md and an archived legacy report. Make supporting changes across the codebase to stabilize testability: updates to agent prompts, channels (base/http), LLM factory, tools (learning, mem, mcp, python, reminder), storage (file_sandbox, mem_storage), registry, tool reference docs, and docker config. Purpose: provide repeatable CI/locally runnable validation, stronger assertions for persistence/isolation, and a clearer acceptance/reporting workflow.

--- a/docker/config.yaml
+++ b/docker/config.yaml
@@ -53,18 +53,17 @@ llm:
     fast_model: glm-4.7-flash
 
   ollama:
-    default_model: qwen3-next:80b-cloud
-    fast_model: qwen3-next:80b-cloud
+    default_model: deepseek-v3.2:cloud
+    fast_model: deepseek-v3.2:cloud
     mode: cloud # cloud or local
     cloud_url: "https://ollama.com"
     local_url: "http://localhost:11434"
     # Tool Calling Compatibility (Ollama Cloud models):
     # ✅ Compatible (JSON Schema supported):
     #   - deepseek-v3.1:671b-cloud (Recommended)
-    #   - glm-4.7:cloud, minimax-m2.1:cloud, gpt-oss:20b-cloud, qwen3-next:80b-cloud
-    # ❌ Incompatible (no JSON Schema support):
-    #   - kimi-k2.5:cloud (use native kimi provider instead)
-    #   - deepseek-v3.2:cloud (XML tool calling only, not compatible)
+    #   - glm-4.7:cloud, minimax-m2.1:cloud, gpt-oss:20b-cloud, qwen3-next:80b-cloud, kimi-k2.5:cloud
+    # ⚠️ Special format:
+    #   - deepseek-v3.2:cloud (XML <function_calls>; supported via channel compatibility parser)
 
   # Gemini (Google)
   gemini:
